自動リロードの実装トライ

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -163,7 +163,7 @@
 </div>
 
 <!-- ★ Visual Battle Scripts - Separated for maintainability ★ -->
-<script src="js/tab_visual_battle.js?v=20260110_clean"></script>
+<script src="js/tab_visual_battle.js?v=20260110_auto_sync"></script>
 
 <!-- ★ アクションドック用のCSS読み込み（JSはmain.jsで読み込み済み。CSSはstyles.css統合済み） ★ -->
 <!-- <link rel="stylesheet" href="css/visual_battle_layout.css"> -->
