大規模リファクタリングフェーズ１

--- a/static/index.html
+++ b/static/index.html
@@ -78,6 +78,7 @@
 
     <!-- JavaScriptファイルの読み込み（依存関係順） -->
     <script src="js/buff_data.js"></script>
+    <script src="js/legacy_globals.js"></script>
     <script src="js/action_dock.js"></script>
     <script src="js/tab_visual_battle.js"></script>
     <script src="js/tab_battlefield.js"></script>
@@ -85,6 +86,7 @@
     <script src="js/modals.js"></script>
     <script src="js/user_management.js"></script>
     <script src="js/main.js"></script>
+    <script type="module" src="js/battle/index.js"></script>
 </body>
 
 </html>
