--- a/static/index.html
+++ b/static/index.html
@@ -78,9 +78,10 @@
 
     <!-- JavaScriptファイルの読み込み（依存関係順） -->
     <script src="js/buff_data.js"></script>
-    <script src="js/legacy_globals.js"></script>
+    <script src="js/legacy_globals.js?v=20260111"></script>
     <script src="js/action_dock.js"></script>
     <script src="js/tab_visual_battle.js"></script>
+    <script src="js/wide_match_synced.js?v=20260111"></script>
     <script src="js/tab_battlefield.js"></script>
     <script src="js/tab_skill_search.js"></script>
     <script src="js/modals.js"></script>
