マッチ画面表示の改善

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -146,8 +146,8 @@
                         <select id="duel-attacker-skill" class="duel-select"></select>
                     </div>
                     <div class="duel-control-btns">
-                        <button id="duel-attacker-calc-btn" class="duel-btn calc">Calculate</button>
-                        <button id="duel-attacker-declare-btn" class="duel-btn declare" disabled>Declare</button>
+                        <button id="duel-attacker-calc-btn" class="duel-btn calc">威力計算</button>
+                        <button id="duel-attacker-declare-btn" class="duel-btn declare" disabled>宣言</button>
                     </div>
                     <div class="duel-preview-area" id="duel-attacker-preview">
                         <div class="preview-command">---</div>
@@ -174,8 +174,8 @@
                             <select id="duel-defender-skill" class="duel-select"></select>
                         </div>
                         <div class="duel-control-btns">
-                            <button id="duel-defender-calc-btn" class="duel-btn calc">Calculate</button>
-                            <button id="duel-defender-declare-btn" class="duel-btn declare" disabled>Declare</button>
+                            <button id="duel-defender-calc-btn" class="duel-btn calc">威力計算</button>
+                            <button id="duel-defender-declare-btn" class="duel-btn declare" disabled>宣言</button>
                         </div>
                     </div>
                     <div id="duel-defender-lock-msg"
