強制終了ボタンのロジック修正

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 
     <div id="entry-portal">
         <div class="login-header">
-            <h2>ジェムリアTRPGダイスボット</h2>
+            <h2>ジェムリアTRPG<br>ダイスボット</h2>
         </div>
         <div class="auth-form">
             <p style="text-align: center; margin-top: 0;">セッションに参加する名前を入力してください。</p>
