アイテム効果実装・使用処理実装

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -1,11 +1,16 @@
 <div id="visual-battle-container">
 
-    <!-- ★ アクションドック（画面左端固定） ★ -->
+    <!-- 左ドック (アクションパネル) -->
     <div id="action-dock" class="action-dock">
+        <div id="dock-match-icon" class="dock-icon" style="display: none;" title="マッチ実行">⚔️</div>
+        <!-- 即時発動アイコン -->
         <div id="dock-immediate-icon" class="dock-icon disabled" title="即時発動スキル">⚡</div>
-        <div id="dock-add-char-icon" class="dock-icon" title="キャラ追加">➕</div>
-        <div id="dock-staging-icon" class="dock-icon" title="未配置キャラ">📦</div>
-        <div id="dock-match-icon" class="dock-icon" title="マッチ（対決）">⚔️</div>
+        <!-- アイテムアイコン (Phase 5) -->
+        <div id="dock-item-icon" class="dock-icon" title="アイテム使用">🎒</div>
+        <!-- キャラ追加アイコン -->
+        <div id="dock-add-char-icon" class="dock-icon" title="キャラクター追加">➕</div>
+        <!-- 未配置エリアアイコン -->
+        <div id="dock-staging-icon" class="dock-icon" title="未配置キャラクター">📦</div>
     </div>
 
     <div id="map-viewport">
