--- a/static/index.html
+++ b/static/index.html
@@ -85,6 +85,7 @@
     <script src="js/tab_battlefield.js"></script>
     <script src="js/tab_skill_search.js"></script>
     <script src="js/modals.js"></script>
+    <script src="js/item_modal.js"></script>
     <script src="js/user_management.js"></script>
     <script src="js/main.js"></script>
     <script type="module" src="js/battle/index.js"></script>
