--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -145,7 +145,8 @@
             <div class="duel-card-wrapper">
                 <div class="duel-side attacker" id="duel-side-attacker">
                     <h4 class="side-title">Attacker (攻)</h4>
-                    <div class="duel-char-name" id="duel-attacker-name">Character A</div>
+                    <div class="duel-char-name clickable-name" id="duel-attacker-name">Character A</div>
+                    <div id="duel-attacker-stats" class="duel-char-stats"></div>
                     <div class="duel-form-group">
                         <label>Skill:</label>
                         <select id="duel-attacker-skill" class="duel-select"></select>
@@ -172,7 +173,8 @@
             <div class="duel-card-wrapper">
                 <div class="duel-side defender" id="duel-side-defender">
                     <h4 class="side-title">Defender (防)</h4>
-                    <div class="duel-char-name" id="duel-defender-name">Character B</div>
+                    <div class="duel-char-name clickable-name" id="duel-defender-name">Character B</div>
+                    <div id="duel-defender-stats" class="duel-char-stats"></div>
                     <div id="duel-defender-controls">
                         <div class="duel-form-group">
                             <label>Skill:</label>
