速度値ロールの修正

--- a/CharaCreator/GEMDICEBOT_CharaCreator.html
+++ b/CharaCreator/GEMDICEBOT_CharaCreator.html
@@ -967,7 +967,7 @@
                 }
                 return cmd;
             }).join("\n");
-            document.getElementById('char-commands').value = baseCommand + (skillCommands ? "\n" + skillCommands : "");
+            document.getElementById('char-commands').value = [baseCommand, skillCommands].filter(s => s).join("\n");
 
             updateJSON();
         }
