ログ機能の改修

--- a/static/3_battlefield.html
+++ b/static/3_battlefield.html
@@ -120,6 +120,7 @@
                     <button class="filter-btn active" data-filter="all">すべて</button>
                     <button class="filter-btn" data-filter="chat">会話</button>
                     <button class="filter-btn" data-filter="system">システム</button>
+                    <button id="show-history-btn" class="filter-btn" style="margin-left: 10px; background-color: #6c757d; color: white;">全ログ(履歴)</button>
                 </div>
             </div>
             <div class="log-area" id="log-area">
