--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -73,6 +73,8 @@
                     style="font-size: 0.8em; padding: 2px 8px; border-radius: 10px; border: 1px solid #ccc; cursor: pointer;">Chat</button>
                 <button class="filter-btn" data-target="visual-log" data-filter="system"
                     style="font-size: 0.8em; padding: 2px 8px; border-radius: 10px; border: 1px solid #ccc; cursor: pointer;">Sys</button>
+                <button id="visual-show-history-btn" class="filter-btn"
+                    style="font-size: 0.8em; padding: 2px 8px; border-radius: 10px; border: 1px solid #ccc; cursor: pointer; background-color: #6c757d; color: white;">History</button>
             </div>
 
             <div id="visual-log-area" class="battle-log"
