--- a/static/index.html
+++ b/static/index.html
@@ -80,6 +80,8 @@
     <script src="js/buff_data.js"></script>
     <script src="js/legacy_globals.js?v=20260111"></script>
     <script src="js/action_dock.js"></script>
+    <script src="js/exploration/exploration_view.js"></script>
+    <script src="js/exploration/exploration_dock.js"></script>
     <script src="js/tab_visual_battle.js"></script>
     <script src="js/wide_match_synced.js?v=20260111"></script>
     <script src="js/tab_battlefield.js"></script>
