複数回行動ロジックの作成

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -239,6 +239,8 @@
 <script src="js/wide_match_synced.js?v=20260111_1906"></script>
 <script src="js/exploration/exploration_view.js?v=20260131_001"></script>
 <script src="js/exploration/exploration_dock.js?v=20260131_001"></script>
+<!-- ★ Battle Core & Components (Module) ★ -->
+<script type="module" src="js/battle/index.js?v=20260204_fix_timeline"></script>
 
 
 <!-- ★ アクションドック用のCSS読み込み（JSはmain.jsで読み込み済み。CSSはstyles.css統合済み） ★ -->
