リセット機能・パラメータ編集機能・画像更新バグ修正の実行

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -7,6 +7,8 @@
         <div id="dock-immediate-icon" class="dock-icon disabled" title="即時発動スキル">⚡</div>
         <!-- アイテムアイコン (Phase 5) -->
         <div id="dock-item-icon" class="dock-icon" title="アイテム使用">🎒</div>
+        <!-- 簡易ステータス編集アイコン -->
+        <div id="dock-quick-edit-icon" class="dock-icon disabled" title="簡易ステータス編集">📝</div>
         <!-- キャラ追加アイコン -->
         <div id="dock-add-char-icon" class="dock-icon" title="キャラクター追加">➕</div>
         <!-- 未配置エリアアイコン -->
