戦闘画面コードの切り分け

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -237,7 +237,7 @@
 </div>
 
 <!-- ★ Visual Battle Scripts - Separated for maintainability ★ -->
-<script src="js/tab_visual_battle.js?v=20260110_auto_sync"></script>
+<!-- ★ Visual Battle Scripts - Moved to index.html for correct execution ★ -->
 <script src="js/wide_match_synced.js?v=20260111_1906"></script>
 <script src="js/exploration/exploration_view.js?v=20260131_001"></script>
 <script src="js/exploration/exploration_dock.js?v=20260131_001"></script>
