--- a/static/index.html
+++ b/static/index.html
@@ -82,6 +82,15 @@
     <script src="js/action_dock.js"></script>
     <script src="js/exploration/exploration_view.js"></script>
     <script src="js/exploration/exploration_dock.js"></script>
+    <!-- Visual Battle Modules (Added 2026-02-10) -->
+    <script src="js/visual/visual_globals.js"></script>
+    <script src="js/visual/visual_map.js"></script>
+    <script src="js/visual/visual_controls.js"></script>
+    <script src="js/visual/visual_ui.js"></script>
+    <script src="js/visual/visual_panel.js"></script>
+    <script src="js/visual/visual_wide.js"></script>
+    <script src="js/visual/visual_socket.js"></script>
+    <script src="js/visual/visual_main.js"></script>
     <script src="js/tab_visual_battle.js"></script>
     <script src="js/wide_match_synced.js?v=20260111"></script>
     <script src="js/tab_battlefield.js"></script>
