矢印の描画など、まだエラー有り

--- a/static/index.html
+++ b/static/index.html
@@ -84,6 +84,7 @@
     <script src="js/exploration/exploration_dock.js"></script>
     <!-- Visual Battle Modules (Added 2026-02-10) -->
     <script src="js/visual/visual_globals.js"></script>
+    <script src="js/visual/visual_arrows.js"></script>
     <script src="js/visual/visual_map.js"></script>
     <script src="js/visual/visual_controls.js"></script>
     <script src="js/visual/visual_ui.js"></script>
