--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -13,6 +13,8 @@
         <div id="dock-add-char-icon" class="dock-icon" title="キャラクター追加">➕</div>
         <!-- 未配置エリアアイコン -->
         <div id="dock-staging-icon" class="dock-icon" title="未配置キャラクター">📦</div>
+        <!-- 矢印表示切替アイコン -->
+        <div id="dock-arrow-toggle-icon" class="dock-icon" title="矢印表示切替">🏹</div>
     </div>
 
     <div id="map-viewport" class="viewport-container" style="display: block;">
@@ -30,6 +32,9 @@
 
         <div id="game-map">
             <div id="map-grid-layer"></div>
+            <!-- ★ Arrow Layer (SVG) ★ -->
+            <svg id="map-arrow-layer"
+                style="position:absolute; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index: 10; overflow: visible;"></svg>
             <div id="map-token-layer"></div>
         </div>
 
