回復の上限を設定

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ジェムリアTRPGダイスボット</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon-gem.svg">
+    <link rel="shortcut icon" href="images/favicon-gem.svg">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.min.js"></script>
 </head>
