--- a/static/mobile/index.html
+++ b/static/mobile/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Gem DiceBot Mobile</title>
+    <link rel="icon" type="image/svg+xml" href="/images/favicon-gem.svg">
+    <link rel="shortcut icon" href="/images/favicon-gem.svg">
     <!-- Core Styles -->
     <!-- Core Styles -->
     <link rel="stylesheet" href="/css/modules/base.css">
